--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,7 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    
+    <!-- Custom CSS from Static folder -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" >
+   
     <title>{% block title %} TODO {% endblock %}</title>
   </head>
   <body>
@@ -23,8 +27,9 @@
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Todo Item" aria-label="Search">
+            <form class="d-flex" method="POST">
+              {% csrf_token %}
+              <input class="form-control me-2" name="item" type="search" placeholder="Todo Item" aria-label="Search">
               <button class="btn btn-outline-secondary" type="submit">Add</button>
             </form>
           </div>
