--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -3,5 +3,42 @@
 {% block title %} TODO-Home {% endblock %}
 
 {% block content %}
-<h1>Home Page</h1>
+
+{% if messages %}
+
+    {% for msg in messages %}
+    <div class="alert alert-success alert-dismissable" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;
+        </button>
+        {{ msg }}
+    </div>
+    {% endfor %}
+
+{% endif %}
+
+
+    {% if all_items %}
+    <table class="table table-bordered">
+    {% for things in all_items %}
+        {% if things.completed %}
+            <tr class="table-danger">
+                <td class="striker">{{ things.item }}</td>
+                <td><center>{{ things.completed }}</center></td>
+                <td><center>Delete</center></td>
+
+            </tr>
+        {% else %}
+            <tr class="table-secondary">
+                <td>{{ things.item }}</td>
+                <td><center>{{ things.completed }}</center></td>
+                <td><center>Delete</center></td>
+
+            </tr>
+
+        {% endif %}
+
+    {% endfor %}
+    </table>
+    {% endif %}
+
 {% endblock %}
