--- a/todo_list/templates/home.html
+++ b/todo_list/templates/home.html
@@ -22,16 +22,16 @@
     {% for things in all_items %}
         {% if things.completed %}
             <tr class="table-danger">
-                <td class="striker">{{ things.item }}</td>
-                <td><center>{{ things.completed }}</center></td>
-                <td><center>Delete</center></td>
+                <td class="striker"><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
+                <td><center><a href="{% url 'uncross' things.id %}">UnCross</a></center></td>
+                <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 
             </tr>
         {% else %}
             <tr class="table-secondary">
-                <td>{{ things.item }}</td>
-                <td><center>{{ things.completed }}</center></td>
-                <td><center>Delete</center></td>
+                <td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
+                <td><center><a href="{% url 'cross_off' things.id %}">Cross OFF</a></center></td>
+                <td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 
             </tr>
 
